--- a/deno.json
+++ b/deno.json
@@ -11,7 +11,7 @@
 		"@mercuryworkshop/bare-mux": "npm:@mercuryworkshop/bare-mux@2.1.7",
 		"@mercuryworkshop/epoxy-transport": "npm:@mercuryworkshop/epoxy-transport@2.1.27",
 		"@mercuryworkshop/libcurl-transport": "npm:@mercuryworkshop/libcurl-transport@1.4.0",
-		"@playform/compress": "npm:@playform/compress@0.1.9",
+		"@playform/compress": "npm:@playform/compress@^0.1.9",
 		"@tailwindcss/vite": "npm:@tailwindcss/vite@^4.1.7",
 		"astro-icons": "npm:astro-icons@^0.1.3",
 		"tailwindcss": "npm:tailwindcss@^4.1.7",
