--- a/deno.json
+++ b/deno.json
@@ -8,16 +8,17 @@
 	},
 	"imports": {
 		"@astrojs/netlify": "npm:@astrojs/netlify@^6.3.3",
+		"@mercuryworkshop/bare-as-module3": "npm:@mercuryworkshop/bare-as-module3@^2.2.5",
 		"@mercuryworkshop/bare-mux": "npm:@mercuryworkshop/bare-mux@2.1.7",
 		"@mercuryworkshop/epoxy-transport": "npm:@mercuryworkshop/epoxy-transport@2.1.27",
 		"@mercuryworkshop/libcurl-transport": "npm:@mercuryworkshop/libcurl-transport@1.4.0",
 		"@playform/compress": "npm:@playform/compress@^0.1.9",
 		"@tailwindcss/vite": "npm:@tailwindcss/vite@^4.1.7",
-		"astro-icons": "npm:astro-icons@^0.1.3",
 		"tailwindcss": "npm:tailwindcss@^4.1.7",
 		"@titaniumnetwork-dev/ultraviolet": "npm:@titaniumnetwork-dev/ultraviolet@3.2.10",
 		"astro": "npm:astro@5.7.13",
-		"astro-icon": "npm:astro-icon@1.1.5",
+    "@iconify-json/tabler": "npm:@iconify-json/tabler@^1.2.18",
+		"astro-icon": "npm:astro-icon@^1.1.5",
 		"vite-plugin-static-copy": "npm:vite-plugin-static-copy@3.0.0",
 		"wisp-server-node": "npm:wisp-server-node@1.1.7"
 	},
